自定义协议

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>nio.base</module>
         <module>nio.prj</module>
         <module>nio.utils</module>
+        <module>nio.socket</module>
     </modules>
 
     <dependencies>
